--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
   </head>
   <body>
-    <redoc spec-url="swagger.json"></redoc>
+    <redoc spec-url="openapi.json"></redoc>
   </body>
 </html>
